Removed h1 from html and placed it in the app container.

--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Stockholm Tourism</title>
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
     <!-- Bootstrap minified css -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
   
-    <h1>Stockholm Tourism</h1>
     <div id="root"></div>
     <!--
       This HTML file is a template.
